# moo-todo

./: .gitignore  README.md  api.py  build.py  convert_icons.py  main.py  pyproject.toml  requirements.txt  图标使用说明.md
.github/workflows/: build.yml
docs/: 项目结构与调用链说明.md  项目结构说明.md
services/: __init__.py  ai_manager.py  ai_providers.py  db_manager.py  todo_service.py
tests/: test_todo_service.py
web/: app.js  index.html  styles.css
