[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moo-todo"
version = "1.0.0"
description = "牛牛待办 - 可爱的任务管理桌面应用"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["todo", "task", "productivity", "desktop", "pywebview"]
authors = [
    {name = "xrj", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "pywebview>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/moo-todo"
Repository = "https://github.com/your-username/moo-todo.git"
Issues = "https://github.com/your-username/moo-todo/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]
python_files = ["test_*.py"]
